<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.project2.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/allianzarena_top" />

        <LinearLayout
            android:id="@+id/ll_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="16dp"
                        android:text="@string/team_a"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="24dp"
                        android:text="@string/teamAScore"
                        android:textColor="@android:color/white"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/rounded_button_red"
                        android:onClick="GoalForTeamA"
                        android:text="@string/teamAGoal" />

                    <TextView
                        android:id="@+id/team_a_cards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="24dp"
                        android:text="@string/teamAcards"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/rounded_button_red"
                        android:onClick="CardForTeamA"
                        android:text="cards" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="16dp"
                        android:text="@string/teamBName"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="24dp"
                        android:text="@string/teamBScore"
                        android:textColor="@android:color/white"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/rounded_button_blue"
                        android:onClick="GoalForTeamB"
                        android:text="@string/teamBGoal" />

                    <TextView
                        android:id="@+id/team_b_cards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="24dp"
                        android:text="@string/teamBcards"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/rounded_button_blue"
                        android:onClick="CardForTeamB"
                        android:text="Cards" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/ll_scoreboard"
            android:gravity="bottom|center_vertical"
            android:orientation="horizontal">


            <Button
                android:id="@+id/FirstGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button_games"
                android:onClick="firstgame"
                android:text="1st game" />

            <Button
                android:id="@+id/SecondGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/rounded_button_games"
                android:onClick="finalScore"
                android:text="2nd game" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/rounded_button_games"
                android:onClick="restart"
                android:text="Restart" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>